<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SampleCustomView</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_title_feature_slider_custom_view">Feature Slider Custom Views</string>
    <string name="txt_title_feature_fullscreen_slider_custom_view">Feature Fullscreen Slider Custom Views</string>
    <string name="txt_title_feature_view_binding_fragment">ViewBinding Fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="txt_title_feature_custom_popup_view">Custom PopupView</string>
    <string name="txt_bt_control_custom_popup_view">Abrir PopupView</string>
    <string name="txt_title_feature_dashed_progress_bar">Dashed ProgressBar</string>
    <string name="txt_title_feature_custom_behavior">Adicionar Comportamento a CustoView Via XML</string>
    <string name="title_activity_frag_container_view">FragContainerViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_default_empty_state_list">Lista Vazia</string>
    <string name="txt_title_feature_recycler_view_list_adapter">RecyclerViewListAdapter - DiffCallback</string>
    <string name="txt_title_fragment_simple_view">Simple Custom View</string>
    <string name="txt_title_fragment_attach_behavior_cv">Adicionando comportamento a uma CV via xml</string>
    <string name="txt_title_fragment_list_options_sample_modal_bottom_sheet">Bottom Sheet 1# Modal: Lista de opções</string>
    <string name="txt_upload">upload</string>
    <string name="txt_delete">remover</string>
    <string name="txt_share">compartilhar</string>
    <string name="txt_title_fragment_bottom_sheet_dialog">Versão simples BottomSheetDialog</string>
    <string name="label_open_simple_bottom_sheet_dialog_fragmeent">Abrir o Modal BottomSheetDialogFragment</string>
    <string name="label_bt_open_bottom_sheet_dialog_frag_list_options">Abrir Bottom Sheet com Lista</string>
    <string name="txt_title_fragment_type_of_bottom_sheet">Explorando tipos de BottomSheet</string>
    <string name="label_bt_open_modal_bottom_sheet">Abrir BottomSheetDialog</string>
    <string name="label_bt_open_standard_bottom_sheet">Abrir Standard BottomSheetDialog</string>
    <string name="label_tv_behavior_expanded">Expandir</string>
    <string name="label_tv_behavior_dragging">Deslocar</string>
    <string name="label_tv_behavior_collapse">Colapsar</string>
    <string name="label_tv_behavior_settling">Animação Up/Down</string>
    <string name="label_tv_behavior_half_expanded">Meia Expansão</string>
    <string name="txt_title_activity_first_sample_gl_renderer" tools:ignore="ExtraTranslation">
        1st  exemplo Renderizando Formas com OpenGL
    </string>
    <string name="txt_title_activity_fling_anim_first_sample">Fling Animation</string>
    <string name="txt_title_activity_move_anim_first_sample" tools:ignore="ExtraTranslation">1st Animação com ObjectAnimator</string>
    <string name="txt_title_fragment_moving_in_circle_custom_view">Capturando evento de movimento em circulos</string>
    <string name="txt_title_fragment_create_typeface_canvas_draw_text">Criando typeface usando canvas.drawText</string>
    <string name="txt_title_fragment_combine_typefaces_canvas_draw_text">Criando combinação de Typefaces</string>
    <string name="txt_title_fragment_drawing_grid_of_circle">Desenhando Grid de circulos</string>
    <string name="txt_title_fragment_drawing_circle_using_path">Usando  Classe Path para desenhar circulos</string>
    <string name="label_title_fragment_form_overlapping_problem">Formulário de teste</string>
    <string name="label_hint_form_overlapping_problem">100</string>
    <string name="label_bt_open_bottom_sheet_dialog_form_keyboard_overlapping">Abrir Formulário - Keyboard Overlapping BottomSheet</string>
    <string name="txt_title_fragment_solving_keyboard_overlapping_bsheet">
        Explorando problema com Keyboard que se sobrepõe ao layout
    </string>
    <string name="txt_title_fragment_two_list_department_persistent_bottom_sheet">
        PersistentBottomSheet - Combinando 2 listas de departamentos
    </string>
    <string name="txt_title_fragment_tree_structure_departments_bottom_sheet_dialog">
        BottomSheetDialog - (Departamentos) Estrutura em árvore
    </string>
    <string name="txt_title_fragment_two_list_department_bottom_sheet_dialog">
        BottomSheetDialog - Combinando 2 listas de departamentos
    </string>
</resources>
