<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_upload"
        android:textSize="23sp"
        app:drawableStartCompat="@drawable/ic_baseline_cloud_upload_24"
        app:drawableLeftCompat="@drawable/ic_baseline_cloud_upload_24"
        android:drawablePadding="4sp"
        android:layout_margin="10sp"
        />

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_upload"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_delete"
        android:textSize="23sp"
        app:drawableStartCompat="@drawable/ic_baseline_delete_forever_24"
        app:drawableLeftCompat="@drawable/ic_baseline_delete_forever_24"
        android:drawablePadding="4sp"
        android:layout_margin="10sp"

        />

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_share"
        android:textSize="23sp"
        app:drawableStartCompat="@drawable/ic_baseline_share_24"
        app:drawableLeftCompat="@drawable/ic_baseline_share_24"
        android:drawablePadding="4sp"
        android:layout_margin="10sp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>