<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_behavior_expanded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:drawablePadding="4sp"
        android:text="@string/label_tv_behavior_expanded"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_24"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_behavior_dragging"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:drawablePadding="4sp"
        android:text="@string/label_tv_behavior_dragging"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_24"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_behavior_expanded" />

    <TextView
        android:id="@+id/tv_behavior_collapse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:drawablePadding="4sp"
        android:text="@string/label_tv_behavior_collapse"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/ic_baseline_arrow_forward_24"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_behavior_dragging" />

</androidx.constraintlayout.widget.ConstraintLayout>